--- a/contact.html
+++ b/contact.html
@@ -67,10 +67,10 @@
         </div>
 
         <div class="col-sm-5 col-md-6 col-lg-7">
-          <h1 id = "contact-title"> Contact </h1>
-
+          <h1> Contact </h1> 
+          <br>
           <div class="form-container" style="background-color:rgba(235, 235, 88, 0.25)">
-            <p style="margin-right: 0px; margin-left: 0px;"> Please feel free to leave your message, I will reply ASAP :D </p>
+            <p style="margin-right: 0px; margin-left: 0px;"> Feel free to drop your message, I'll get back to you ASAP! 😊 </p>
             <form method="post" action="mailto:yic075@ucsd.edu" enctype="text/plain">
               <div class="fields">
                 <div class="field">
@@ -102,10 +102,9 @@
 
     <!-- <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=306&t=t&d=uykzlUvWR0yggTLG1WGcCbfE8Z9I122s2gcLJvqTs7A&co=343cc6&cmo=c4fe40&cmn=fcd61f&ct=ffffff"></script> -->
 
-    <!-- footer -->
-    <div class="footer">
-      <p> Contact Information </p>
-      <p> yic075@ucsd.edu | cys021031@163.com</p>
+    <!-- copyright -->
+    <div class="copyright">
+      <p> Copyright Yishan Cai &copy 2024 </p>
     </div>
   
     <!-- Scripts -->
