--- a/experience.html
+++ b/experience.html
@@ -64,10 +64,9 @@
 
 
 
-    <!-- footer -->
-    <div class="footer">
-      <p> Contact Information </p>
-      <p> yic075@ucsd.edu | cys021031@163.com</p>
+    <!-- copyright -->
+    <div class="copyright">
+      <p> Copyright Yishan Cai &copy 2024 </p>
     </div>
 
     <!-- Scripts -->
