--- a/index.html
+++ b/index.html
@@ -65,42 +65,84 @@
     <!-- open image -->
     <img src="images\open_bg.jpg" alt="Full Page Image" class="full-page-image">
     <div class="overlay">
-      <h1>&nbsp;&nbsp;I'm Yishan Cai</h1>
+      <h1>I'm Yishan Cai</h1>
       <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
     </div>
 
     <div class="container">
       <div class="container-fluid">
-        <div class="row">
-
+        <div id="row1" class="row bg-white">
           <div class="col-sm-5 col-md-6 col-lg-7">
             <br>
-            <h2> About </h2>
-            <br>
-            <p> My name is Yishan Cai. I'm a Data Scientist, 
-              Statistical Analyst, Pipa player. I currently study at 
-              UC San Diego, double majoring in 
-              Data Science and Math - Probability & Statistics, 
-              and will be graduated in June 2025. 
-              I'm actively looking for data analysis / machine learning roles. 
-              Please contact me if you see me as a fit
-            </p>
+            <h1> About </h1> <br>
+            <p> Hi there, I am <span class="intro-effect">Yishan</span>. I am currently pursuing a double major in <span class="intro-effect">Data Science</span> and <span class="intro-effect">Math - Probability & Statistics</span> at UC San Diego, set to graduate in June 2025. My academic journey has been shaped by a profound passion for understanding patterns, extracting insights, and deriving meaning from data. I am actively seeking roles in data analysis and machine learning that align with my skills and aspirations. </p>
+            <p> I am always eager to embrace new challenges and connect with diverse perspectives. If you're interested in collaborating or simply want to discuss data science, art, or adventures, feel free to contact me at <a href="mailto:yic075@ucsd.edu" class="intro-effect">yic075@ucsd.edu</a>. Let's create something amazing together! </p>
+            <p> I enjoy painting and playing the pipa, and I'm a fan of hiking and photography. </p>
+            <p> View my <a href="data\YishanCai_Resume.pdf" target="_blank" class="intro-effect">résumé</a> (updated in May. 2024) </p>
           </div>
-
           <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
-            <img class="img-responsive" src="images\home_img1.JPG"><br>
+            <img class="img-responsive" src="images\home_img0.jpg"><br>
           </div>
-
         </div>
+        <br><br><br><br>
+      
+        <div id="row2" class="row bg-grey">
+          <div class="col-sm-5 col-md-4 col-lg-4">
+            <br><br><br><br><br><br>
+            <h1> Education </h1>
+          </div>
+          <div class="col-sm-7 col-md-8 col-lg-8 mt-5">
+            <header>
+              <h2>University of California, San Diego</h2>
+              <p><i>September 2021 - Expected June 2025</i></p>
+              <p>Data Science <br>
+              <i><u>Bachelor of Science</u>, Halıcıoğlu Data Science Institute (HDSI)</i></p>
+              <p>Probability & Statistics <br>
+              <i><u>Bachelor of Science</u>, Math department</i></p>
+            </header>
+          </div>  
+        </div>
+        <br><br><br><br>
+ 
+        <div id="row3" class="row bg-white">
+          <div class="col-sm-5 col-md-4 col-lg-4">
+            <br><br><br><br><br><br>
+            <h1> Experience </h1>
+          </div>
+          <div class="col-sm-7 col-md-8 col-lg-8 mt-5">
+            <header>
+              <h2>Large Language Model Data Intern</h2>
+              <p><i>Fourth Paradigm Technology Co., Ltd.</i> <br> <i>June 2023 - September 2023</i></p>
+              <p>
+                <li>Performed data cleaning on large-scale unstructured data, including Zhihu articles, Toutiao articles, etc., by using python, and obtained 923G data</li>
+                <li>Evaluated various indicators and characteristics of cleaned corpus data, completed over 45 evaluation reports of tens of thousands of data, and improved average accuracy by ~22% after optimization </li>
+                <li>Developed 2000+ prompts, and originated corresponding answers for supervised fine-tuning (SFT) model training</li>
+              </p>
+            </header>
+            <br><hr /><br>
+            
+            <header>
+              <h2>Research Assistant</h2>
+              <p><i>Chinese Academy of Agricultural Sciences, Institute of Vegetables and Flowers</i> <br> <i>August 2023 - September 2023</i></p>
+              <p>
+                <li>Implemented Principal Component Analysis (PCA), and developed Score Plot and Loading Plot to analyze the contribution value of different indicators of Feng-Hua Rose</li>
+                <li>Derived correlation heatmaps using R to visualize the effects of three different arbuscular mycorrhiza fungi (AMF) on the morphology and physiology of rose</li>
+              </p>
+            </header>
+          </div>  
+        </div>
+        <br><br><br><br>
+
+
+
       </div>
     </div>
 
     <br><br><br><br>
   
-    <!-- footer -->
-    <div class="footer">
-      <p> Contact Information </p>
-      <p> yic075@ucsd.edu | cys021031@163.com</p>
+    <!-- copyright -->
+    <div class="copyright">
+      <p> Copyright Yishan Cai &copy 2024 </p>
     </div>
   
     <!-- Scripts -->
