--- a/photo.html
+++ b/photo.html
@@ -226,10 +226,9 @@
 <br><br><br>
 
 
-    <!-- footer -->
-    <div class="footer">
-      <p> Contact Information </p>
-      <p> yic075@ucsd.edu | cys021031@163.com</p>
+    <!-- copyright -->
+    <div class="copyright">
+      <p> Copyright Yishan Cai &copy 2024 </p>
     </div>
 
     <!-- Scripts -->
