--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="experience.html">Experience</a>
+              <a class="nav-link" href="index.html#row-exp">Experience</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="project.html">Project</a>
@@ -74,19 +74,19 @@
             <form method="post" action="mailto:yic075@ucsd.edu" enctype="text/plain">
               <div class="fields">
                 <div class="field">
-                  <label for="name">Name</label>
+                  <label for="name"> Name </label>
                   <input type="text" name="name" id="name" />
                 </div>
                 <div class="field">
-                  <label for="email">Email</label>
+                  <label for="email"> Email</label>
                   <input type="text" name="email" id="email" />
                 </div>
                 <div class="field">
-                  <label for="subject">Subject</label>
+                  <label for="subject"> Subject </label>
                   <input type="text" name="subject" id="subject" />
                 </div>
                 <div class="field">
-                  <label for="message">Message</label>
+                  <label for="message"> Message </label>
                   <textarea name="message" id="message" rows="3"></textarea>
                 </div>
               </div>
