--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="experience.html">Experience</a>
+              <a class="nav-link" href="index.html#row-exp">Experience</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="project.html">Project <span class="sr-only">(current)</span></a>
