add project outline

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="col-sm-5 col-md-6 col-lg-7">
             <br>
             <h1> About </h1> <br>
-            <p> Hi there, I am <span class="intro-effect">Yishan</span>. I am currently pursuing a double major in Data Science and Math - Probability & Statistics at UC San Diego, set to graduate in June 2025. My academic journey has been shaped by a profound passion for understanding patterns, extracting insights, and deriving meaning from data. I am actively seeking roles in <span class="intro-effect">data analysis</span> and <span class="intro-effect">machine learning</span> that align with my skills and aspirations. </p>
+            <p> Hi there, I am <span class="intro-effect">Yishan Cai(蔡依珊)</span>. I am currently pursuing a double major in Data Science and Math - Probability & Statistics at UC San Diego, set to graduate in June 2025. My academic journey has been shaped by a profound passion for understanding patterns, extracting insights, and deriving meaning from data. I am actively seeking roles in <span class="intro-effect">data analysis</span> and <span class="intro-effect">machine learning</span> that align with my skills and aspirations. </p>
             <p> I am always eager to embrace new challenges and connect with diverse perspectives. If you're interested in collaborating or simply want to discuss data science, art, or adventures, feel free to contact me at <a href="mailto:yic075@ucsd.edu" class="intro-effect">yic075@ucsd.edu</a>. Let's create something amazing together! </p>
             <p> I enjoy painting and playing the pipa, and I'm a fan of hiking and photography. </p>
             <p> View my <a href="data\YishanCai_Resume.pdf" target="_blank" class="intro-effect">résumé</a> (updated in May. 2024) </p>
