--- a/paint.html
+++ b/paint.html
@@ -60,7 +60,7 @@
 
 
 
-    <h2 align="center">小小动力——我的爱好</h2><br>
+    <h2>小小动力——我的爱好</h2><br>
     <div class="container">
       <div class="row">
         <div class="col-sm-7 col-md-6 col-lg-5">
@@ -145,7 +145,6 @@
               <img class="img-responsive" src="照片\水粉4.jpg" alt="水粉"><br>
               <img class="img-responsive" src="照片\水粉5.jpg" alt="水粉"><br>
               <img class="img-responsive" src="照片\水粉7.jpg" alt="雪山"><br>
-              <img class="img-responsive" src="照片\水粉6.jpg" alt="水粉"><br>
               <img class="img-responsive" src="照片\水粉和我？.jpg" alt="水粉和我">
            </div>
         </div>
@@ -163,12 +162,9 @@
           <img class="img-responsive" src="照片\被偷拍.jpg" alt="画井盖"><br>
           <img class="img-responsive" src="照片\辛普森墙绘.jpg" alt="辛普森墙绘"><br>
           <img class="img-responsive" src="照片\戏剧墙绘.jpg" alt="戏剧墙绘"><br>
-          <img class="img-responsive" src="照片\板绘1.jpg" alt="电脑绘画"><br>
-          <img class="img-responsive" src="照片\板绘2.jpg" alt="电脑绘画"><br>
-          <img class="img-responsive" src="照片\板绘3.jpg" alt="电脑绘画"><br>
           <img class="img-responsive" src="照片\国画.jpg" alt="白描"><br>
-          <img class="img-responsive" src="照片\手绘1.jpg" alt="女生和大公鸡"><br>
-          <img class="img-responsive" src="照片\手绘2.jpg" alt="小樱"><br>
+          
+          
           <img class="img-responsive" src="照片\手绘3.jpg" alt="头像"><br>
           <img class="img-responsive" src="照片\手绘4.jpg" alt="新春贺图"><br>
         </div>
