--- a/photo.html
+++ b/photo.html
@@ -27,8 +27,8 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="experience.html">Experience</a>
@@ -36,15 +36,15 @@
           <li class="nav-item">
             <a class="nav-link" href="project.html">Project</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Life
+              Life <span class="sr-only">(current)</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbar">
               <a class="dropdown-item" href="paint.html">Paint</a>
               <a class="dropdown-item" href="pipa.html">Pipa</a>
               <a class="dropdown-item" href="ruber.html">Rubber stamp</a>
-              <a class="dropdown-item" href="photo.html">Photography<span class="sr-only">(current)</span></a>
+              <a class="dropdown-item" href="photo.html">Photography </a>
             </div>
           </li>
           <li class="nav-item">
@@ -62,17 +62,11 @@
       
     </div>
   </nav>
-  <br>
-  <br>
-  <br>
+  <br><br><br>
 
-
-  <h2 align="center">记录生活——不到入门级摄影</h2><br>
   <div class="container">
-   <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.</p><br>
-     <h3 style="color:Dodgerblue;">-云-</h3>
-      <p>每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。</p>
-      <div class="row">
+    <div class="container-fluid">
+      <div class="row" class="row bg-white">
         <div class="col-sm-7 col-md-6 col-lg-5  mx-auto">
           <div id="carouselpp" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -138,92 +132,9 @@
           </div>
         </div>
       </div>
-      <br>
-
-       <h3 style="color:Dodgerblue;">-花-</h3>
-        <p>花就很杂了，啥都有。八一大花园的杏花，桃花；我妈养的有水仙，石竹；最后还有乱入的丝瓜花...<br>
-        <img src="照片\花4.5.jpg" height="312" width="312"><br>
-        <img src="照片\花4.jpg" height="312" width="312"><br>
-        <img src="照片\花5.jpg" height="312" width="416"><br>
-        <img src="照片\花6.5.jpg" height="312" width="416"><br>
-        <img src="照片\花1.jpg" height="312" width="416"><br>
-        <img src="照片\花2.jpg" height="312" width="416"><br>
-        <img src="照片\花3.jpg" height="416" width="312"><br>
-        <img src="照片\花7.jpg" height="312" width="416"><br>
-        <img src="照片\花6.jpg" height="312" width="416"><br>
-        <img src="照片\花8.jpg" height="312" width="416"></p>
-      <br>
-
-       <h3 style="color:Dodgerblue;">-足球-</h3>
-        <p>足球的照片是上学年拍的，自我感觉良好（赞），还没有很多拍动态人物的经验，继续加油！<br>
-        <img src="照片\足1.jpg" height="312" width="416"><br>
-        <img src="照片\足2.jpg" height="312" width="416"><br>
-        <img src="照片\足3.jpg" height="312" width="416"><br>
-        <img src="照片\足4.jpg" height="312" width="416"><br>
-        <img src="照片\足5.jpg" height="312" width="416"><br>
-        <img src="照片\足6.jpg" height="312" width="312"></p><br>
-
-       <h3 style="color:Dodgerblue;">-故宫-</h3>
-        <p>好久之前去的故宫啦，最喜欢第二张和第六张，有那种“一入宫门深似海”的感觉。<br>
-        <img src="照片\故宫1.jpg" height="312" width="312"><br>
-        <img src="照片\故宫5.jpg" height="312" width="312"><br>
-        <img src="照片\故宫4.jpg" height="312" width="312"><br>
-        <img src="照片\故宫2.jpg" height="416" width="312"><br>
-        <img src="照片\故宫6.jpg" height="416" width="312"><br>
-        <img src="照片\故宫3.jpg" height="312" width="416"></p><br>
-
-       <h3 style="color:Dodgerblue;">-川渝之旅-</h3>
-        <p>是去游学，游学在我身上有奇怪的定律，最开始明明有人跟我一起逛，每每到最后，都只是我独自在景区溜达。喜欢老街那种热闹又掩不住悲凉。<br>
-        <img src="照片\成1.jpg" height="312" width="312"><br>
-        <img src="照片\成2.jpg" height="312" width="312"><br>
-        <img src="照片\成4.jpg" height="312" width="312"><br>
-        <img src="照片\成3.jpg" height="416" width="312"><br>
-        止不住的多拍两张红配绿~<br>
-        <img src="照片\成5.jpg" height="312" width="416"><br>
-        <img src="照片\成6.jpg" height="312" width="416"><br>
-        熊猫真的好赏脸.可爱！<br>
-        <img src="照片\成7.jpg" height="312" width="416"></p><br>
-
-       <h3 style="color:Dodgerblue;">-HK-</h3>
-        <p>去香港还是因为考sat:)，但是考试并不能影响我的好心情，开心开心。<br>
-        <img src="照片\香港1.jpg" height="312" width="416"><br>
-        <img src="照片\香港2.jpg" height="312" width="416"><br>
-        <img src="照片\香港3.jpg" height="312" width="416"><br>
-        <img src="照片\香港4.jpg" height="312" width="416"><br>
-        <img src="照片\香港5.jpg" height="312" width="416"><br>
-        <img src="照片\香港6.jpg" height="312" width="416"><br>
-        <img src="照片\香港7.jpg" height="312" width="312"><br>
-        小白说夜景不是很好照，我赞同！照完了还得调啊调，光源太多了。<br>
-        <img src="照片\香港8.jpg" height="312" width="416"><br>
-        <img src="照片\香港9.jpg" height="416" width="312"></p><br>
-
-       <h3 style="color:Dodgerblue;">-杂-</h3>
-        <p>最后这部分就是我的杂图了，实名很杂~<br>
-        20年春节蜗居在家，偶尔下雪看着贼开心！（还被恐吓说雪里面有病毒不能玩雪）<br>
-        <img src="照片\杂1.jpg" height="312" width="416"><br>
-        初三上学路上的家属楼，我最喜欢的颜色！曾经无数次吐槽房子都爱红砖色...<br>
-        <img src="照片\杂2.jpg" height="312" width="312"><br>
-        <img src="照片\杂3.jpg" height="416" width="312"><br>
-        还是初三。那天正好下完雨，咋看都好看，最喜欢下完雨后的空气，有泥土混合青草的香味~<br>
-        <img src="照片\杂4.jpg" height="312" width="416"><br>
-        大学里，女学生应该有的样子？<br>
-        <img src="照片\杂5.jpg" height="416" width="312"><br>
-        <img src="照片\杂6.jpg" height="312" width="416"><br>
-        <img src="照片\杂7.jpg" height="312" width="416"><br>
-        <img src="照片\杂8.jpg" height="312" width="416"><br>
-        我妈自己种的小西红柿（赞）<br>
-        <img src="照片\杂9.jpg" height="312" width="312"><br>
-        <img src="照片\杂10.jpg" height="312" width="416"><br>
-        颐和园的夕阳，美美的<br>
-        <img src="照片\杂11.jpg" height="312" width="312"><br>
-        <img src="照片\杂12.jpg" height="312" width="416"><br>
-        很喜欢这张！是中考完去欢乐谷，中途在地铁站等同学的时候照的。<br>
-        <img src="照片\杂13.jpg" height="312" width="416"><br>
-        <img src="照片\杂15.jpg" height="312" width="312"><br>
-        <img src="照片\杂16.jpg" height="312" width="312"><br>
-     </p>
+    </div>
   </div>
-<br><br><br>
+  <br><br><br>
 
 
     <!-- copyright -->
