--- a/pipa.html
+++ b/pipa.html
@@ -16,6 +16,10 @@
       text-indent: 35px;
     }
     </style>
+
+    <!-- add favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   </head>
 
 <body>
@@ -118,12 +122,6 @@
   </div>
 
   <br><br><br>
-
-
-
-
-
-
 
 
     <!-- copyright -->
