--- a/project.html
+++ b/project.html
@@ -16,6 +16,10 @@
       text-indent: 35px;
     }
     </style>
+
+    <!-- add favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
@@ -36,16 +40,8 @@
             <li class="nav-item active">
               <a class="nav-link" href="project.html">Project <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Life
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbar">
-                <a class="dropdown-item" href="paint.html">Paint</a>
-                <a class="dropdown-item" href="pipa.html">Pipa</a>
-                <a class="dropdown-item" href="ruber.html">Rubber stamp</a>
-                <a class="dropdown-item" href="photo.html">Photography</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="life.html">Life</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
