--- a/ruber.html
+++ b/ruber.html
@@ -16,6 +16,10 @@
       text-indent: 35px;
     }
     </style>
+
+    <!-- add favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   </head>
 
 <body>
