revise navbar functionality

--- a/photo.html
+++ b/photo.html
@@ -45,10 +45,9 @@
               Life <span class="sr-only">(current)</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbar">
-              <a class="dropdown-item" href="paint.html">Paint</a>
-              <a class="dropdown-item" href="pipa.html">Pipa</a>
-              <a class="dropdown-item" href="ruber.html">Rubber stamp</a>
-              <a class="dropdown-item" href="photo.html">Photography </a>
+              <a class="dropdown-item" href="paint.html" target="_top">Art</a>
+              <a class="dropdown-item" href="photo.html" target="_top">Photography</a>
+              <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
             </div>
           </li>
           <li class="nav-item">
