--- a/paint.html
+++ b/paint.html
@@ -31,18 +31,23 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home </a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item">
+            <a class="nav-link" href="experience.html">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="project.html">Project</a>
+          </li>
+          <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Life
+              Life <span class="sr-only">(current)</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbar">
-              <a class="dropdown-item" href="paint.html" target="_top">Paint</a>
-              <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
-              <a class="dropdown-item" href="ruber.html" target="_top">Rubber stamp</a>
+              <a class="dropdown-item" href="paint.html" target="_top">Art</a>
               <a class="dropdown-item" href="photo.html" target="_top">Photography</a>
+              <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
             </div>
           </li>
           <li class="nav-item">
