change project to timeline format

--- a/project.html
+++ b/project.html
@@ -60,65 +60,44 @@
     </nav>
     <br><br><br>
 
-
-    <div class="container">
-      <div class="container-fluid">
-        <div id="row-proj" class="row bg-white">
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <br><br>
-
-            <article>
-              <img class="img-proj" src="images\baf.jpg">
-              <p>
-                <a href="#" style="display: inline-block; padding-top: 10px;"> Bank Account Fraud Detection </a><br>
-                <span class="date">January - March, <strong>2024</strong></span>
-              </p>
-            </article>
-            <br><br>
-
-            <article>
-              <img class="img-proj" src="images\global.png">
-              <p>
-                <a href="https://kellyyygsy.github.io/dsc106_proj3/" style="display: inline-block; padding-top: 10px;"> Decades of Global Internet Usage: A Visual Overview </a><br>
-                <span class="date">January - March, <strong>2024</strong></span>
-              </p>
-            </article>
-            <br><br>
-      
-            <article>
-              <img class="img-proj" src="images\baiyang.png">
-              <p>
-                <a href="#" style="display: inline-block; padding-top: 10px;"> Geospatial Analysis on Baiyang Lake </a><br>
-                <span class="date">January - April, <strong>2019</strong></span>
-              </p>
-            </article>
-            <br><br>
-            
-          </div>
-
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <br><br>
-            <article>
-              <img class="img-proj" src="images\bond.jpg">
-              <p>
-                <a href="https://kellyyygsy.github.io/dsc106_finalproj/" style="display: inline-block; padding-top: 10px;"> Interactive 10-Year Treasury Yield Visualization </a><br>
-                <span class="date">January - March, <strong>2024</strong></span>
-              </p>
-            </article>            
-            <br><br>
-
-            <article>
-              <img class="img-proj" src="images\food.jpg">
-              <p>
-                <a href="#" style="display: inline-block; padding-top: 10px;"> Multi-Class Recipe Rating Classification </a><br>
-                <span class="date">September - December, <strong>2023</strong></span>
-              </p>
-            </article>
-            <br><br>
-          </div>
+    <div class="timeline">
+      <div class="timeline-item">
+        <div class="timeline-content">
+          <!-- <h3>YOUR_TITLE</h3> -->
+          <p><a href="#" class="intro-effect"> Bank Account Fraud Detection </a></p>
+          <p class="timeline-date">January - March, <strong>2024</strong></p>
         </div>
       </div>
-    </div>>
+
+      <div class="timeline-item">
+        <div class="timeline-content">
+          <p><a href="https://kellyyygsy.github.io/dsc106_finalproj/" class="intro-effect"> Interactive 10-Year Treasury Yield Visualization </a></p>
+          <p class="timeline-date">January - March, <strong>2024</strong></p>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-content">
+          <p><a href="https://kellyyygsy.github.io/dsc106_proj3/" class="intro-effect"> Decades of Global Internet Usage: A Visual Overview </a></p>
+          <p class="timeline-date">January - March, <strong>2024</strong></p> 
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-content">
+          <p><a href="https://acai1031.github.io/Recipe-Ratings-Prediction/" class="intro-effect"> Multi-Class Recipe Rating Classification </a></p>
+          <p class="timeline-date">September - December, <strong>2023</strong></p>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-content">
+          <p><a href="#" class="intro-effect"> Geospatial Analysis on Baiyang Lake </a></p>
+          <p class="timeline-date">January - April, <strong>2019</strong></p>
+        </div>
+      </div>
+
+    </div>
 
     <!-- copyright -->
     <div class="copyright">
