add photopage outline

--- a/paint.html
+++ b/paint.html
@@ -45,7 +45,7 @@
               Life <span class="sr-only">(current)</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbar">
-              <a class="dropdown-item" href="paint.html" target="_top">Art</a>
+              <a class="dropdown-item active" href="paint.html" target="_top">Art</a>
               <a class="dropdown-item" href="photo.html" target="_top">Photography</a>
               <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
             </div>
