--- a/pipa.html
+++ b/pipa.html
@@ -47,7 +47,7 @@
             <div class="dropdown-menu" aria-labelledby="navbar">
               <a class="dropdown-item" href="paint.html" target="_top">Art</a>
               <a class="dropdown-item" href="photo.html" target="_top">Photography</a>
-              <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
+              <a class="dropdown-item active" href="pipa.html" target="_top">Pipa</a>
             </div>
           </li>
           <li class="nav-item">
