--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-7 col-md-6 col-lg-5">
-          <img src="images\contact_img.jpg" class="d-block w-100" alt="...">
+          <img src="images\contact_img.jpg" class="img-responsive" alt="Contact image">
         </div>
 
         <div class="col-sm-5 col-md-6 col-lg-7">
