--- a/photo.html
+++ b/photo.html
@@ -23,7 +23,7 @@
   </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top"  style="box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"  style="box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);">
     <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbar">
               <a class="dropdown-item" href="paint.html" target="_top">Art</a>
-              <a class="dropdown-item" href="photo.html" target="_top">Photography</a>
+              <a class="dropdown-item active" href="photo.html" target="_top">Photography</a>
               <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
             </div>
           </li>
@@ -65,19 +65,19 @@
       
     </div>
   </nav>
-  <br><br><br>
+  <br><br><br><br><br>
 
-  <div class="container">
-    <div class="container-fluid">
-      <div class="row" class="row bg-white">
-        <div class="col-sm-7 col-md-6 col-lg-5  mx-auto">
+  <h1 style="text-align: center;">Yishan's Portfolio</h1><br>
+  <p style="text-align: center;"> add some description here </p><br>
+  <p><a href="featured.html"><img src="images/life-photo.jpg" alt="Featured Image" class="featured-image"></a></p><br>
 
-        </div>
-      </div>
-    </div>
+  <div class="photo-container">
+    <img src="images\open_bg.jpg" alt="Image 2">
+    <img src="images\open_bg.jpg" alt="Image 3">
+    <img src="images\open_bg.jpg" alt="Image 4">
   </div>
-  
   <br><br><br>
+
 
 
     <!-- copyright -->
