finish photo outline

--- a/photo.html
+++ b/photo.html
@@ -22,61 +22,75 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   </head>
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"  style="box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"  style="box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbar">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="experience.html">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="project.html">Project</a>
-          </li>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Life <span class="sr-only">(current)</span>
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbar">
-              <a class="dropdown-item" href="paint.html" target="_top">Art</a>
-              <a class="dropdown-item active" href="photo.html" target="_top">Photography</a>
-              <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="experience.html">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="project.html">Project</a>
+            </li>
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Life <span class="sr-only">(current)</span>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbar">
+                <a class="dropdown-item" href="paint.html" target="_top">Art</a>
+                <a class="dropdown-item active" href="photo.html" target="_top">Photography</a>
+                <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
 
-      <div class="icon-container">
-        <span><a href="mailto:yic075@ucsd.edu"><i class="fa fa-envelope"></i></a></span>
-        <span><a href="https://github.com/acai1031"><i class="fab fa-github"></i></a></span>
-        <span><a href="https://www.linkedin.com/in/yishan-cai-760470252/"><i class="fab fa-linkedin"></i></a></span>
-        <span><a href="https://www.instagram.com/aaacai_1031/"><i class="fab fa-instagram"></i></a></span>
+        <div class="icon-container">
+          <span><a href="mailto:yic075@ucsd.edu"><i class="fa fa-envelope"></i></a></span>
+          <span><a href="https://github.com/acai1031"><i class="fab fa-github"></i></a></span>
+          <span><a href="https://www.linkedin.com/in/yishan-cai-760470252/"><i class="fab fa-linkedin"></i></a></span>
+          <span><a href="https://www.instagram.com/aaacai_1031/"><i class="fab fa-instagram"></i></a></span>
+        </div>
       </div>
-      
+    </nav>
+    <br><br><br><br><br>
+
+    <h1 style="text-align: center;">Yishan's Portfolio</h1><br>
+    <p style="text-align: center;"> add some description here </p><br>
+    <p><a href="featured.html"><img src="images/life-photo.jpg" alt="Featured Image" class="featured-image"></a></p><br>
+
+    <div class="bottom-left">
+      <h1>Featured Album</h1>
     </div>
-  </nav>
-  <br><br><br><br><br>
 
-  <h1 style="text-align: center;">Yishan's Portfolio</h1><br>
-  <p style="text-align: center;"> add some description here </p><br>
-  <p><a href="featured.html"><img src="images/life-photo.jpg" alt="Featured Image" class="featured-image"></a></p><br>
+    <div class="photo-container">
+      <div class="photo-item">
+        <p><a href="#"><img src="images/open_bg.jpg" alt="Hashtag Image" class="featured-image"></a></p>
+        <h5> #Hashtags </h5>
+      </div>
+      <div class="photo-item">
+        <p><a href="trip.html"><img src="images/open_bg.jpg" alt="Trip Image" class="featured-image"></a></p>
+        <h5> Trips </h5>
+      </div>
+      <div class="photo-item">
+        <p><a href="#"><img src="images/open_bg.jpg" alt="Theme Image" class="featured-image"></a></p>
+        <h5> Themes </h5>
+      </div>
+    </div>
+    <br><br><br><br><br>
 
-  <div class="photo-container">
-    <img src="images\open_bg.jpg" alt="Image 2">
-    <img src="images\open_bg.jpg" alt="Image 3">
-    <img src="images\open_bg.jpg" alt="Image 4">
-  </div>
-  <br><br><br>
+
 
 
 
