--- a/project.html
+++ b/project.html
@@ -63,8 +63,7 @@
     <div class="timeline">
       <div class="timeline-item">
         <div class="timeline-content">
-          <!-- <h3>YOUR_TITLE</h3> -->
-          <p><a href="#" class="intro-effect"> Bank Account Fraud Detection </a></p>
+          <p><a href="project-BAF.html" class="intro-effect"> Bank Account Fraud Detection </a></p>
           <p class="timeline-date">January - March, <strong>2024</strong></p>
         </div>
       </div>
@@ -96,7 +95,6 @@
           <p class="timeline-date">January - April, <strong>2019</strong></p>
         </div>
       </div>
-
     </div>
 
     <!-- copyright -->
