--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
           <div class="col-sm-7 col-md-8 col-lg-8 mt-5">
             <header>
               <h2>University of California, San Diego</h2>
-              <p><i>September 2021 - Expected June 2025</i></p>
-              <p>Data Science <br>
+              <p class="italic-time">September 2021 - Expected June 2025</p>
+              <p> Data Science <br>
               <i><u>Bachelor of Science</u>, Halıcıoğlu Data Science Institute (HDSI)</i></p>
-              <p>Probability & Statistics <br>
+              <p> Probability & Statistics <br>
               <i><u>Bachelor of Science</u>, Math department</i></p>
             </header> 
           </div> 
@@ -109,7 +109,7 @@
           <div class="col-sm-7 col-md-8 col-lg-8 mt-5">
             <header>
               <h2>Large Language Model Data Intern</h2>
-              <p>Fourth Paradigm Technology Co., Ltd.<br> <i>June 2023 - September 2023</i></p>
+              <p>Fourth Paradigm Technology Co., Ltd.<br> <i class="italic-time">June 2023 - September 2023</i></p>
               <p>
                 <li>Performed data cleaning on large-scale unstructured data, including Zhihu articles, Toutiao articles, etc., by using python, and obtained 923G data</li>
                 <li>Evaluated various indicators and characteristics of cleaned corpus data, completed over 45 evaluation reports of tens of thousands of data, and improved average accuracy by ~22% after optimization </li>
@@ -120,7 +120,7 @@
             
             <header>
               <h2>Research Assistant</h2>
-              <p> Chinese Academy of Agricultural Sciences, <i>Institute of Vegetables and Flowers</i> <br> <i>August 2023 - September 2023</i></p>
+              <p> Chinese Academy of Agricultural Sciences, <i>Institute of Vegetables and Flowers</i> <br> <i class="italic-time">August 2023 - September 2023</i></p>
               <p>
                 <li>Implemented Principal Component Analysis (PCA), and developed Score Plot and Loading Plot to analyze the contribution value of different indicators of Feng-Hua Rose</li>
                 <li>Derived correlation heatmaps using R to visualize the effects of three different arbuscular mycorrhiza fungi (AMF) on the morphology and physiology of rose</li>
@@ -130,7 +130,7 @@
 
             <header>
               <h2>Research Assistant</h2>
-              <p> Beijing Forestry University, <i>School of Landscape Architecture</i> <br> <i>Advisor: Prof. Wei</i> <br> <i>July 2020 - August 2020</i></p>
+              <p> Beijing Forestry University, <i>School of Landscape Architecture</i> <br> <i>Advisor: Prof. Wei</i> <br> <i class="italic-time">July 2020 - August 2020</i></p>
               <p>
                 <li>Digitally captured records for six historical sites and designed satisfactory scales based on the Oliver Tourist Satisfaction Model to gather 250+ survey data via questionnaire</li>
                 <li>Performed data cleaning and sorting, descriptive analysis, and linear regression</li>
@@ -140,7 +140,7 @@
 
             <header>
               <h2>Website Builder</h2>
-              <p>China House <br> <i>Advisor: Dr. Zhu, Stony Brook University</i> <br> <i>March 2020 - June 2020</i></p>
+              <p>China House <br> <i>Advisor: Dr. Zhu, Stony Brook University</i> <br> <i class="italic-time">March 2020 - June 2020</i></p>
               <p>
                 <li>Established an official <a href="https://canborneo-china.netlify.app/" target="_blank" class="intro-effect">chinese website</a> to show the current situation of Borneo rainforest and orangutan</li>
                 <li>Developed structure and style of the website via HTML, JavaScript, and CSS</li>
