--- a/project-BAF.html
+++ b/project-BAF.html
@@ -57,14 +57,14 @@
         </div>
       </div>
     </nav>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br>
 
     <div class="container">
         <div class="container-fluid">
             <div id="row-project" class="row bg-white">
                 <div class="col-sm-5 col-md-6 col-lg-12 text-center">
                     <h1 style="text-align: center;"> Bank Account Fraud Detection</h1><br><br>
-                    <h5> implementing Decision Tree, XGBoost, and CatBoost </h5><br>
+                    <h5 style="color: #828282;"> implementing Decision Tree, XGBoost, and CatBoost </h5><br>
                     <p style="text-align: center;"> 
                         <i>Team Contribution:</i><br>
                         Dataset research, Data Wrangling, Model implementation, Hyperparameter tuning, Model evaluation
@@ -77,8 +77,15 @@
                         Utilizing the Bank Account Fraud (BAF) dataset, which was published at <a href="https://arxiv.org/abs/2211.13358">NeurIPS 2022</a> and is available through the Kaggle website, 
                         we aim to construct a model that engages with a rich bank account data, crafted to reflect real-world circumstances. 
                         The dataset is a vital resource for developing machine learning algorithms, fostering more robust fraud detection techniques, 
-                        and contributing to enhanced security within the banking sector.
+                        and contributing to enhanced security within the banking sector.<br><br>
+                        <strong style="padding-right: 15px;">Links</strong>
+                        <a href="https://github.com/acai1031/Bank_Account_Fraud_Detection" target="_blank" style="text-decoration: none;">
+                          <button style="padding: 10px 15px; font-size: 16px; cursor: pointer;">Project</button>
+                        </a>
                     </p><br>
+                    <br>
+                    
+
                     <h2> See our report here: </h2>
                     <embed src= "data/BAF_report.pdf" style="width: 100%; height: 100%; padding: 0 30px;">
                 </div>
