--- a/project.html
+++ b/project.html
@@ -64,35 +64,35 @@
       <div class="timeline-item">
         <div class="timeline-content">
           <p><a href="project-BAF.html" class="intro-effect"> Bank Account Fraud Detection </a></p>
-          <p class="timeline-date">January - March, <strong>2024</strong></p>
+          <p class="italic-time">January - March, <strong>2024</strong></p>
         </div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
           <p><a href="https://kellyyygsy.github.io/dsc106_finalproj/" class="intro-effect"> Interactive 10-Year Treasury Yield Visualization </a></p>
-          <p class="timeline-date">January - March, <strong>2024</strong></p>
+          <p class="italic-time">January - March, <strong>2024</strong></p>
         </div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
           <p><a href="https://kellyyygsy.github.io/dsc106_proj3/" class="intro-effect"> Decades of Global Internet Usage: A Visual Overview </a></p>
-          <p class="timeline-date">January - March, <strong>2024</strong></p> 
+          <p class="italic-time">January - March, <strong>2024</strong></p> 
         </div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
           <p><a href="https://acai1031.github.io/Recipe-Ratings-Prediction/" class="intro-effect"> Multi-Class Recipe Rating Classification </a></p>
-          <p class="timeline-date">September - December, <strong>2023</strong></p>
+          <p class="italic-time">September - December, <strong>2023</strong></p>
         </div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
           <p><a href="#" class="intro-effect"> Geospatial Analysis on Baiyang Lake </a></p>
-          <p class="timeline-date">January - April, <strong>2019</strong></p>
+          <p class="italic-time">January - April, <strong>2019</strong></p>
         </div>
       </div>
     </div>
