--- a/pipa.html
+++ b/pipa.html
@@ -23,7 +23,7 @@
   </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,66 +65,81 @@
       
     </div>
   </nav>
-  <br><br>
+  <br><br><br><br><br>
 
+  <h1 style="text-align: center;"> Strings of Tradition </h1><br>
 
-
-  <h2 align="center">小小动力——我的爱好</h2>
-  <br>
   <div class="container">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-7 col-md-6 col-lg-5">
-            <video class="img-responsive mt-5" controls>
-              <source src="照片\第一次登台演出.mp4" type="video/mp4">
-            </video>
+      <div id="row-pipa-1" class="row bg-white">
+        <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
+          <img class="img-responsive" src="images/pipa/pipa_jh.jpg">
         </div>
         <div class="col-sm-5 col-md-6 col-lg-7">
           <br>
-          <h3 style="color:Dodgerblue;">弹琵琶</h3><br>
+          <h2> A Journey of Growth </h2> <br>
           <p>
-            是小学二年级开始学的琵琶。据我妈说，说我看电视上人家大姐姐穿旗袍弹琵琶好看所以才想学琴。这是什么神奇的理由，反正现在胖胖的acai也穿不了hhh。<br><br>
-            那会的acai每周四下午提前出小学的校门，因为学琴的地方不太远，也没有私家车，就跟着背着琴的妈妈走到学琴的地方。小时候，说实话，是不想学琴的，
-            所以大部分支持我去上课的来源，都是去上课的路上的小超市。每次吃巧克力面包，喝巧克力袋装牛奶，再买一板小贴纸才能抚慰不想学琴的痛苦心情。<br><br>
-            这是第一次上台演出的视频，高糊，听个声儿！猜猜哪个是我~
+            I began my journey with the <span class="intro-effect">pipa</span> in the second grade, inspired by the elegant performances of talented musicians in beautiful qipaos on television, 
+            as my mother fondly recalls.
+          </p>
+          <p>
+            My passion for pipa flourished as I joined a <span class="intro-effect">Chinese orchestra</span> in junior high school, 
+            where I transitioned from small private lessons to a more independent and challenging learning environment. 
+            In this setting, I learned essential skills such as tuning and replacing strings on my own, marking significant personal growth. 
+            The Chinese idiom "ten years of practice for one minute on stage" perfectly encapsulates my experience with the orchestra, 
+            where <span class="intro-effect">rigorous rehearsals and performances</span> honed my abilities. I vividly remember the intense training sessions for competitions, 
+            where our mornings were filled with joy as we headed to the practice room, only to be utterly exhausted by the afternoon, 
+            each of us striving to find the perfect posture to play seamlessly.
           </p>
         </div>
-     </div>
-    <br><br>
+      </div>
 
-    <div class="row">
-       <div class="col-sm-5 col-md-6 col-lg-7">
-         <br>
-         <p>
-           上初中后，就去了我们初中的乐团。在北京市第十九中学金帆民乐团的一年多的时间是我最难忘经历之一。其实初一的时候就找过乐团的老师了，但那会不想去。初二的时候还是进去了，最开始很陌生。
-           两个高中的学姐，两个同年级的女生，还有两个初一的学妹。
-           尴尬的点就在于，两个人一个谱架台，我正好单着了，其实还好。在乐团不同于去上小班课，老师不会特意的照顾你。就在这个环境下学会了调弦，换弦。那会算是成长了很多。
-           有点压力是在于训练的老师吧，他就乐意坐在单着的人旁边。总指挥时不时来一下，带着浓郁的古龙香水的味道。
-           初二半个学期的合奏适应期就在古龙香水和槟榔味儿中度过。下学期的时候，因为同届的有个女生回老家了，我终于可以换到二谱台了！<br><br>
-           “台上一分钟，台下十年功”在乐团的练习和演出里完美的体现了。还能记得为了准备比赛而集训，上午时开开心心去排练室，下午的我们都是东倒西歪，想要拥有一千万个稳稳抱着琴，坐好还能弹好的姿势。
-           此时的我，终于体会到小时候的琵琶老师所说的无聊且又痛苦的练习时光。不害臊的说，我每次排完练屁股都潮潮的，回家发现捂出痱子。<br><br>
-           合奏的经历，说好玩也好玩，说无趣倒是也无趣。合奏总比一个人独奏强，团体总是能掩盖个人的小缺点。但是当整体都很好的时候，个人的缺点又十分突兀了。还记得那会练
-           《大宅门》，有一段琵琶声部的单独的solo，我老怕弹错，就不敢大声弹。声音一小了就会被欧哥（声部长）说，让我大点声，那好吧，那就大点声。
-           在初二的时候参加了两次演出。（喜欢我们的演出服，青花瓷样式的，可惜我一毕业就换新的了。）第一次去非常异常的紧张。抱着琵琶的手就跟要去考级似的，不停的出汗。坐好后，
-           等到指挥给指令，才不那么紧张。后来的两次演出因为第一次的经验就很放松了，更加享受在台上演奏的感觉。
-         </p>
-       </div>
-       <div class="col-sm-7 col-md-6 col-lg-5">
-         <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src='https://player.youku.com/embed/XNDYyNTQ4MjQ5Ng==' frameborder=0 'allowfullscreen'></iframe>
-          </div>
-            <br><br>
-            <img class="img-responsive" src="照片\二十届艺术展演.jpg" alt="演出照"><br><br>
-            <img class="img-responsive" src="照片\二十届艺术展演 近.jpg" alt="演出照"><br><br>
-            <img class="img-responsive" src="照片\琵琶声部2.jpg" alt="弹拨声部"><br><br>
-            <img class="img-responsive" src="照片\琵琶声部.jpg" alt="弹拨声部"><br><br>
-            <img class="img-responsive" src="照片\憨憨合照.jpg" alt="我和同学的合影" ><br><br>
-            <img class="img-responsive" src="照片\三十九中交流演出.jpg" alt="与青岛三十九中交流演出"><br><br>
-            <img class="img-responsive" src="照片\三十九中交流合照.jpg" alt="与青岛三十九中交流演出">
+      <div id="row-pipa-2" class="row bg-white">
+        <div class="col-sm-5 col-md-6 col-lg-7">
+          <br>
+          <h2> Promoting Cultural Heritage </h2> <br>
+          <p>
+            My dedication to promoting Chinese traditional music continued into my university years, where I joined the <span class="intro-effect">Five Millennia Orchestra</span> at UC San Diego. 
+            This student-founded society, committed to preserving and celebrating our cultural heritage, has provided me with the opportunity to perform quarterly concerts to an audience of over 200 people. 
+            Through our music, we aim to bridge cultures and bring the soulful essence of China's five thousand year history to a broader audience in the USA.
+          </p>
+          <p>
+            Each concert is a carefully curated experience, featuring <span class="intro-effect">traditional pieces alongside contemporary compositions</span>, 
+            showcasing the versatility and timelessness of Chinese instruments. Our performances are more than just entertainment; 
+            they are educational experiences designed to foster a deeper understanding and appreciation of <span class="intro-effect">Chinese culture</span>. 
+          </p>
+        </div>
+        <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
+          <img class="img-responsive" src="images/pipa/pipa_h.jpg">
         </div>
       </div>
+
+      
+      <div id="row-performance" class="row bg-white">
+        <div class="col-sm-5 col-md-6 col-lg-12">
+          <h2> See our performances here: </h2>
+          <div class="gallery">
+            <div class="item"><video src="images/pipa/vedio1.mp4" controls></video></div>
+            <div class="item"><video src="images/pipa/vedio2.mp4" controls></video></div>
+            <div class="item"><iframe class="embed-responsive-item" src='https://player.youku.com/embed/XNDYyNTQ4MjQ5Ng==' frameborder=0 allowfullscreen></iframe></div>
+            <div class="item"><img src="images/pipa/pipa_u1.jpg" alt="Image 1"></div>
+            <div class="item"><img src="images/pipa/pipa_u2.jpg" alt="Image 2"></div>
+            <div class="item"><img src="images/pipa/pipa_u3.jpg" alt="Image 3"></div>
+            <div class="item"><img src="images/pipa/pipa_u4.jpg" alt="Image 4"></div>
+            <div class="item"><img src="images/pipa/pipa_jh1.jpg" alt="Image 5"></div>
+            <div class="item"><img src="images/pipa/pipa_jh5.jpg" alt="Image 6"></div>
+            <div class="item"><img src="images/pipa/pipa_jh2.jpg" alt="Image 7"></div>
+            <div class="item"><img src="images/pipa/pipa_jh3.jpg" alt="Image 8"></div>
+            <div class="item"><img src="images/pipa/pipa_jh4.jpg" alt="Image 9"></div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
+
+
 
   <br><br><br>
 
