--- a/pipa.html
+++ b/pipa.html
@@ -110,7 +110,7 @@
           </p>
         </div>
         <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
-          <img class="img-responsive" src="images/pipa/pipa_h.jpg">
+          <img class="img-responsive" src="images/pipa/pipa_h.JPG">
         </div>
       </div>
 
@@ -123,13 +123,13 @@
             <div class="item"><video src="images/pipa/vedio2.mp4" controls></video></div>
             <div class="item"><iframe class="embed-responsive-item" src='https://player.youku.com/embed/XNDYyNTQ4MjQ5Ng==' frameborder=0 allowfullscreen></iframe></div>
             <div class="item"><img src="images/pipa/pipa_u1.jpg" alt="Image 1"></div>
-            <div class="item"><img src="images/pipa/pipa_u2.jpg" alt="Image 2"></div>
+            <div class="item"><img src="images/pipa/pipa_u2.JPG" alt="Image 2"></div>
             <div class="item"><img src="images/pipa/pipa_u3.jpg" alt="Image 3"></div>
             <div class="item"><img src="images/pipa/pipa_u4.jpg" alt="Image 4"></div>
             <div class="item"><img src="images/pipa/pipa_jh1.jpg" alt="Image 5"></div>
             <div class="item"><img src="images/pipa/pipa_jh5.jpg" alt="Image 6"></div>
             <div class="item"><img src="images/pipa/pipa_jh2.jpg" alt="Image 7"></div>
-            <div class="item"><img src="images/pipa/pipa_jh3.jpg" alt="Image 8"></div>
+            <div class="item"><img src="images/pipa/pipa_jh3.JPG" alt="Image 8"></div>
             <div class="item"><img src="images/pipa/pipa_jh4.jpg" alt="Image 9"></div>
           </div>
         </div>
