add oregon trip

--- a/la.html
+++ b/la.html
@@ -84,7 +84,7 @@
                         <a><img src="images/trips/LA/l10.JPG" alt="Photo 4" class="photo-thumb"></a>
                         <a><img src="images/trips/LA/l9.jpg" alt="Photo 4" class="photo-thumb"></a>                        
                         <a><img src="images/trips/LA/l11.jpg" alt="Photo 4" class="photo-thumb"></a>
-                        <a><img src="images/trips/LA/l15.jpg" alt="Photo 4" class="photo-thumb"></a>
+                        <a><img src="images/trips/LA/l15.JPG" alt="Photo 4" class="photo-thumb"></a>
                         <a><img src="images/trips/LA/l13.jpg" alt="Photo 4" class="photo-thumb"></a>                        
                         <a><img src="images/trips/LA/huntington.jpg" alt="Photo 4" class="photo-thumb"></a>
                         <a><img src="images/trips/LA/l14.jpg" alt="Photo 4" class="photo-thumb"></a>
