--- a/trip.html
+++ b/trip.html
@@ -67,7 +67,7 @@
     <br><br><br><br><br>
 
     <h1 style="text-align: center;"> Trips </h1><br>
-    <p style="text-align: center;"> add some description here </p>
+    <p style="text-align: center;"> Freedom is the oxygen of the soul. </p>
 
 
     <div class="container">
@@ -77,17 +77,41 @@
 
                     <div class="photo-gallery">
                         <a href="oceanside.html" class="photo-link">
-                            <img src="images/trips/bigbearlake/oceanside.JPG" alt="Photo 1" class="photo">
+                            <img src="images/trips/bigbearlake/oceanside.JPG" alt="oceanside" class="photo">
                             <div class="photo-overlay">
                                 <div class="photo-title"> POST | OCEANSIDE </div>
                             </div>
                         </a>
                         <a href="la.html" class="photo-link">
-                            <img src="images/trips/LA/huntington.jpg" alt="Photo 2" class="photo">
+                            <img src="images/trips/LA/huntington.jpg" alt="los angeles" class="photo">
                             <div class="photo-overlay">
                                 <div class="photo-title"> POST | LOS ANGELES </div>
                             </div>
                         </a>
+                        <a href="oregon.html" class="photo-link">
+                          <img src="images/trips/oregon/p19.jpg" alt="oregon" class="photo">
+                          <div class="photo-overlay">
+                              <div class="photo-title"> POST | PORTLAND </div>
+                          </div>
+                        </a>
+                        <!-- <a href="vegas.html" class="photo-link">
+                          <img src="images/trips/LA/huntington.jpg" alt="las vegas" class="photo">
+                          <div class="photo-overlay">
+                              <div class="photo-title"> POST | LAS VEGAS </div>
+                          </div>
+                        </a>
+                        <a href="beach.html" class="photo-link">
+                          <img src="images/trips/LA/huntington.jpg" alt="beaches" class="photo">
+                          <div class="photo-overlay">
+                              <div class="photo-title"> POST | BEACHES </div>
+                          </div>
+                        </a>
+                        <a href="beach.html" class="photo-link">
+                          <img src="images/trips/LA/huntington.jpg" alt="beaches" class="photo">
+                          <div class="photo-overlay">
+                              <div class="photo-title"> POST | BEACHES </div>
+                          </div>
+                        </a> -->
                     </div>
 
                 </div>
